--- a/ifc_polygon-rasterization_mulithreading.ipynb
+++ b/ifc_polygon-rasterization_mulithreading.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
-    "import trame.ui\n",
-    "import trame\n",
     "from importlib import reload\n",
     "import multiprocessing\n",
     "import ifcopenshell\n",
@@ -21,12 +29,13 @@
     "import random\n",
     "import glob\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import threading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +124,31 @@
     "    k = int((pcd[2] - grid_bounds[4]) / voxel_size)\n",
     "    \n",
     "    if 0 <= i < dims[0]-1 and 0 <= j < dims[1]-1 and 0 <= k < dims[2]-1 and grid_attributes[i,j,k] == -1:\n",
+    "        return (i, j, k, mesh_guid_index)\n",
+    "    return None\n",
+    "\n",
+    "def apply_point_result(result, grid_attributes):\n",
+    "    if result is not None:\n",
+    "        i, j, k, mesh_guid_index = result\n",
     "        grid_attributes[i,j,k] = mesh_guid_index\n",
     "\n",
+    "def process_points_thread(args):\n",
+    "    points, mesh_guid_index, grid_bounds, voxel_size, dims, grid_attributes = args\n",
+    "    for point in points:\n",
+    "        result = process_point(point, mesh_guid_index, grid_bounds, voxel_size, dims, grid_attributes)\n",
+    "        if result is not None:\n",
+    "            i, j, k, mesh_guid_index = result\n",
+    "            grid_attributes[i, j, k] = mesh_guid_index\n",
+    "\n",
+    "def multithread_process_points(pcd_list, grid_bounds, voxel_size, dims, grid_attributes):\n",
+    "    threads = []\n",
+    "    for i, pcd in enumerate(pcd_list):\n",
+    "        t = threading.Thread(target=process_points_thread, args=((pcd.points, i, grid_bounds, voxel_size, dims, grid_attributes),))\n",
+    "        threads.append(t)\n",
+    "        t.start()\n",
+    "    \n",
+    "    for t in threads:\n",
+    "        t.join()\n",
     "\n",
     "def voxelize_space(bounds, pcd_list, voxel_size):\n",
     "    \"\"\"Create a 3d grid and check the intersections of the meshes with the grid.\"\"\"\n",
@@ -124,13 +156,12 @@
     "    \n",
     "    # create an empty 3d array in the same dimensions of the grid\n",
     "    dims = grid.dimensions\n",
-    "    #grid_values = np.zeros((dims[0]-1, dims[1]-1, dims[2]-1), dtype=bool)\n",
     "    grid_attributes = np.full((dims[0]-1, dims[1]-1, dims[2]-1), -1, dtype=int)\n",
     "\n",
     "    grid_bounds = grid.bounds\n",
     "\n",
-    "    [process_point(point, i, grid_bounds, voxel_size, dims, grid_attributes) \n",
-    "    for i, pcd in enumerate(pcd_list) for point in pcd.points]\n",
+    "    # Use the parallel_process_points function to process points in parallel\n",
+    "    multithread_process_points(pcd_list, grid_bounds, voxel_size, dims, grid_attributes)\n",
     "\n",
     "    # assign empty array to the grid\n",
     "    grid.cell_data['attributes'] = grid_attributes.flatten(order='F').astype(int)\n",
@@ -197,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,17 +283,15 @@
     "    p = pv.Plotter()  \n",
     "    # Extract the cells with non-empty attribute values\n",
     "    non_empty_cells = grid.cell_data['attributes'] != -1  \n",
-    "    \n",
+    "        \n",
     "    # Add the mesh to the plotter with the non-empty cells\n",
     "    p.add_mesh(grid.extract_cells(non_empty_cells), opacity=0.5, show_edges=False,show_scalar_bar=False)\n",
     "    p.add_bounding_box(line_width=2, color=\"blue\")\n",
-    "\n",
     "    screenshot_filename = os.path.join(\"screenshots\", os.path.basename(file_name) + \".png\")\n",
     "    p.screenshot(screenshot_filename)\n",
-    "    #p.show()\n",
+    "    p.show()\n",
     "    end_time = time.time()\n",
     "    visualization_time = end_time - start_time\n",
-    "\n",
     "    print(f'Calculating concrete volume of {file_name}...')\n",
     "\n",
     "    start_time = time.time()\n",
@@ -289,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,12 +344,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12f33be08407437bad90e8b020cca32c",
+       "model_id": "8266cafbccdd4914b04a845ef7cad1e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52847/index.html?ui=P_0x15ef69fb880_10&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:50577/index.html?ui=P_0x13883808970_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -331,7 +360,7 @@
      "output_type": "stream",
      "text": [
       "Calculating concrete volume of IFC Files\\01_Test.ifc...\n",
-      "{'File': 'IFC Files\\\\01_Test.ifc', 'Conversion Time': 0.08571171760559082, 'Total Polygons': 1056, 'Voxel Size': 0.2, 'Total Points': 71470, 'Point Cloud Creation Time': 0.010004520416259766, 'Rasterization Time': 0.40396809577941895, 'Visualization Time': 0.8073322772979736, 'Concrete Volume': 9.952, 'Concrete Calculation Time': 0.003997087478637695}\n",
+      "{'File': 'IFC Files\\\\01_Test.ifc', 'Conversion Time': 0.09023261070251465, 'Total Polygons': 1056, 'Voxel Size': 0.2, 'Total Points': 71470, 'Point Cloud Creation Time': 0.016180992126464844, 'Rasterization Time': 0.4869234561920166, 'Visualization Time': 1.9901635646820068, 'Concrete Volume': 9.592, 'Concrete Calculation Time': 0.005448579788208008}\n",
       "IFC Files\\02_Duplex.ifc\n",
       "Converting IFC Files\\02_Duplex.ifc...\n",
       "Point cloud is being formed for IFC Files\\02_Duplex.ifc...\n",
@@ -342,12 +371,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e08e3b1ed224dd0ac3455ca646fb1f2",
+       "model_id": "0c3f9aa2b62848f4ad15ea8fd97fea2f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52847/index.html?ui=P_0x15b44cefd60_11&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:50577/index.html?ui=P_0x1389137c130_1&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -358,29 +387,92 @@
      "output_type": "stream",
      "text": [
       "Calculating concrete volume of IFC Files\\02_Duplex.ifc...\n",
-      "{'File': 'IFC Files\\\\02_Duplex.ifc', 'Conversion Time': 3.9339325428009033, 'Total Polygons': 9420, 'Voxel Size': 0.2, 'Total Points': 2158977, 'Point Cloud Creation Time': 0.5575194358825684, 'Rasterization Time': 9.180205345153809, 'Visualization Time': 0.5518627166748047, 'Concrete Volume': 58.464, 'Concrete Calculation Time': 0.5338971614837646}\n",
+      "{'File': 'IFC Files\\\\02_Duplex.ifc', 'Conversion Time': 2.8130080699920654, 'Total Polygons': 9420, 'Voxel Size': 0.2, 'Total Points': 2158977, 'Point Cloud Creation Time': 0.3498399257659912, 'Rasterization Time': 13.490779399871826, 'Visualization Time': 0.4833974838256836, 'Concrete Volume': 55.6, 'Concrete Calculation Time': 0.4761621952056885}\n",
       "IFC Files\\03_Clinic.ifc\n",
-      "Converting IFC Files\\03_Clinic.ifc...\n"
+      "Converting IFC Files\\03_Clinic.ifc...\n",
+      "Point cloud is being formed for IFC Files\\03_Clinic.ifc...\n",
+      "Rasterizing IFC Files\\03_Clinic.ifc...\n",
+      "Visualizing IFC Files\\03_Clinic.ifc...\n"
      ]
     },
     {
-     "ename": "SystemError",
-     "evalue": "<built-in function Iterator_next> returned a result with an exception set",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Laptop\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ifcopenshell\\ifcopenshell_wrapper.py:4825\u001b[0m, in \u001b[0;36mentity_instance.<lambda>\u001b[1;34m(self, name, value)\u001b[0m\n\u001b[0;32m   4824\u001b[0m     __swig_setmethods__\u001b[39m.\u001b[39mupdate(\u001b[39mgetattr\u001b[39m(_s, \u001b[39m'\u001b[39m\u001b[39m__swig_setmethods__\u001b[39m\u001b[39m'\u001b[39m, {}))\n\u001b[1;32m-> 4825\u001b[0m \u001b[39m__setattr__\u001b[39m \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m \u001b[39mself\u001b[39m, name, value: _swig_setattr(\u001b[39mself\u001b[39;49m, entity_instance, name, value)\n\u001b[0;32m   4826\u001b[0m __swig_getmethods__ \u001b[39m=\u001b[39m {}\n",
-      "File \u001b[1;32mc:\\Users\\Laptop\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ifcopenshell\\ifcopenshell_wrapper.py:70\u001b[0m, in \u001b[0;36m_swig_setattr\u001b[1;34m(self, class_type, name, value)\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mYou cannot add attributes to \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m \u001b[39mself\u001b[39m)\n\u001b[1;32m---> 70\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_swig_setattr\u001b[39m(\u001b[39mself\u001b[39m, class_type, name, value):\n\u001b[0;32m     71\u001b[0m     \u001b[39mreturn\u001b[39;00m _swig_setattr_nondynamic(\u001b[39mself\u001b[39m, class_type, name, value, \u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Laptop\\Documents\\GitHub\\ifc-rasterization\\ifc_polygon-rasterization.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m ifc_files \u001b[39m=\u001b[39m find_ifc_files(directory_path)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Process each IFC file and store the results in a list\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m all_results \u001b[39m=\u001b[39m [process_ifc_file(file_name) \u001b[39mfor\u001b[39;00m file_name \u001b[39min\u001b[39;00m ifc_files]\n",
-      "\u001b[1;32mc:\\Users\\Laptop\\Documents\\GitHub\\ifc-rasterization\\ifc_polygon-rasterization.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m ifc_files \u001b[39m=\u001b[39m find_ifc_files(directory_path)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Process each IFC file and store the results in a list\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m all_results \u001b[39m=\u001b[39m [process_ifc_file(file_name) \u001b[39mfor\u001b[39;00m file_name \u001b[39min\u001b[39;00m ifc_files]\n",
-      "\u001b[1;32mc:\\Users\\Laptop\\Documents\\GitHub\\ifc-rasterization\\ifc_polygon-rasterization.ipynb Cell 5\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mConverting \u001b[39m\u001b[39m{\u001b[39;00mfile_name\u001b[39m}\u001b[39;00m\u001b[39m...\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m start_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m all_meshes, element_information, voxel_size \u001b[39m=\u001b[39m open3d_block_by_element(ifc_file)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m total_polygons \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(\u001b[39mlen\u001b[39m(mesh\u001b[39m.\u001b[39mtriangles) \u001b[39mfor\u001b[39;00m mesh \u001b[39min\u001b[39;00m all_meshes)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# combine all meshes into one mesh and find the bounds\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\Laptop\\Documents\\GitHub\\ifc-rasterization\\ifc_polygon-rasterization.ipynb Cell 5\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m             index \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m         \u001b[39m# Move to the next geometric representation\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m iterator\u001b[39m.\u001b[39;49mnext():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Laptop/Documents/GitHub/ifc-rasterization/ifc_polygon-rasterization.ipynb#W4sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m \u001b[39mreturn\u001b[39;00m all_meshes, element_information, temp_dimension\n",
-      "File \u001b[1;32mc:\\Users\\Laptop\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ifcopenshell\\ifcopenshell_wrapper.py:1018\u001b[0m, in \u001b[0;36mIterator.next\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1016\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnext\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m   1017\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"next(Iterator self) -> entity_instance\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1018\u001b[0m     \u001b[39mreturn\u001b[39;00m _ifcopenshell_wrapper\u001b[39m.\u001b[39;49mIterator_next(\u001b[39mself\u001b[39;49m)\n",
-      "\u001b[1;31mSystemError\u001b[0m: <built-in function Iterator_next> returned a result with an exception set"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4e06ed03eb24107ae04b1321c48c2b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:50577/index.html?ui=P_0x138b3798070_2&reconnect=auto' style='width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating concrete volume of IFC Files\\03_Clinic.ifc...\n",
+      "{'File': 'IFC Files\\\\03_Clinic.ifc', 'Conversion Time': 21.268558740615845, 'Total Polygons': 63182, 'Voxel Size': 0.27, 'Total Points': 12774131, 'Point Cloud Creation Time': 2.5482370853424072, 'Rasterization Time': 80.99862718582153, 'Visualization Time': 1.2913951873779297, 'Concrete Volume': 17.183, 'Concrete Calculation Time': 7.327913045883179}\n",
+      "IFC Files\\04.ifc\n",
+      "Converting IFC Files\\04.ifc...\n",
+      "Point cloud is being formed for IFC Files\\04.ifc...\n",
+      "Rasterizing IFC Files\\04.ifc...\n",
+      "Visualizing IFC Files\\04.ifc...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cab5a04ddac41c29bf41e607bb78300",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:50577/index.html?ui=P_0x138913972b0_3&reconnect=auto' style='width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating concrete volume of IFC Files\\04.ifc...\n",
+      "{'File': 'IFC Files\\\\04.ifc', 'Conversion Time': 2.183194398880005, 'Total Polygons': 16440, 'Voxel Size': 0.25, 'Total Points': 21111368, 'Point Cloud Creation Time': 3.365001678466797, 'Rasterization Time': 125.56527256965637, 'Visualization Time': 2.6058993339538574, 'Concrete Volume': 7716.156, 'Concrete Calculation Time': 1.5559840202331543}\n",
+      "IFC Files\\05.ifc\n",
+      "Converting IFC Files\\05.ifc...\n",
+      "Point cloud is being formed for IFC Files\\05.ifc...\n",
+      "Rasterizing IFC Files\\05.ifc...\n",
+      "Visualizing IFC Files\\05.ifc...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1be08486fc7471a881fce247e531d30",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:50577/index.html?ui=P_0x138a82da770_4&reconnect=auto' style='width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating concrete volume of IFC Files\\05.ifc...\n",
+      "{'File': 'IFC Files\\\\05.ifc', 'Conversion Time': 3.9632163047790527, 'Total Polygons': 39244, 'Voxel Size': 0.2, 'Total Points': 32082430, 'Point Cloud Creation Time': 5.397493839263916, 'Rasterization Time': 209.91610264778137, 'Visualization Time': 5.045258045196533, 'Concrete Volume': 9905.848, 'Concrete Calculation Time': 2.3943870067596436}\n",
+      "IFC Files\\06.ifc\n",
+      "Converting IFC Files\\06.ifc...\n",
+      "Point cloud is being formed for IFC Files\\06.ifc...\n",
+      "Rasterizing IFC Files\\06.ifc...\n"
      ]
     }
    ],
@@ -409,7 +501,7 @@
     "df = pd.DataFrame(all_results)\n",
     "\n",
     "# Write the DataFrame to an Excel file\n",
-    "df.to_excel(\"performance_results_aabb.xlsx\", index=False)"
+    "df.to_excel(\"performance_results_parallel.xlsx\", index=False)"
    ]
   }
  ],
