--- a/ifc_polygon-rasterization_multiprocessing.ipynb
+++ b/ifc_polygon-rasterization_multiprocessing.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
+    "import trame.ui\n",
+    "import trame\n",
     "from importlib import reload\n",
     "import multiprocessing\n",
     "import ifcopenshell\n",
@@ -16,57 +28,74 @@
     "import time\n",
     "from functools import reduce\n",
     "import open3d as o3d\n",
+    "import random\n",
     "import glob\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from concurrent.futures import ProcessPoolExecutor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "def random_color():\n",
+    "    \"\"\"Generate a random RGB color.\"\"\"\n",
+    "    return [random.random(), random.random(), random.random()]\n",
+    "\n",
     "def open3d_block_by_element(ifc_file): \n",
+    "    # Configuration for ifcopenshell geometric settings\n",
     "    settings = ifcopenshell.geom.settings()\n",
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
+    "    \n",
+    "    # Initialize the iterator for geometric representations\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    include_list = [\"IfcWall\", \"IfcSlab\", \"IfcBeam\", \"IfcColumn\", \"IfcWallStandardCase\", \"IfcFoundation\", \"IfcRoof\"]\n",
+    "    \n",
+    "    # Define entity types to include and exclude\n",
+    "    exclude_list = set([\"IfcCovering\", \"IfcFurnishingElement\", \"IfcSpace\", \"IfcOpening\", \"IfcOpeningElement\", \"IfcRailing\"])\n",
+    "    \n",
+    "    # Lists to store the resulting meshes and element information\n",
     "    all_meshes = []\n",
     "    element_information = {}\n",
-    "    ind = 0\n",
+    "    \n",
+    "    # Variable to track the smallest dimension among all meshes\n",
     "    temp_dimension = 5.0\n",
+    "    \n",
+    "    # Iterate over the geometric representations\n",
     "    if iterator.initialize():\n",
+    "        index = 0\n",
     "        while True:\n",
     "            shape = iterator.get()\n",
-    "            if shape.type in include_list:\n",
-    "                \n",
-    "                product = ifc_file.by_guid(shape.guid)\n",
-    "\n",
-    "                faces = np.array(shape.geometry.faces)             \n",
+    "            \n",
+    "            # Check if the shape type is not excluded and represents an IfcBuildingElement\n",
+    "            if shape.type not in exclude_list and shape.product.is_a(\"IfcBuildingElement\"):\n",
+    "                # Convert the shape's geometry to an Open3D mesh\n",
+    "                faces = np.array(shape.geometry.faces)\n",
     "                verts = np.array(shape.geometry.verts).reshape(-1, 3)\n",
-    "                mesh = o3d.geometry.TriangleMesh()\n",
-    "                mesh.vertices = o3d.utility.Vector3dVector(verts)\n",
-    "                mesh.triangles = o3d.utility.Vector3iVector(faces.reshape(-1, 3))\n",
-    "\n",
-    "                #find the smallest dimension of the mesh\n",
-    "                min_dimension = min(mesh.get_max_bound() - mesh.get_min_bound())\n",
-    "                if min_dimension > 0.1:\n",
-    "                    if temp_dimension > min_dimension:\n",
-    "                        temp_dimension = round(float(min_dimension),3)\n",
+    "                mesh = o3d.geometry.TriangleMesh(vertices=o3d.utility.Vector3dVector(verts),\n",
+    "                                                 triangles=o3d.utility.Vector3iVector(faces.reshape(-1, 3)))\n",
     "                \n",
+    "                # Update the smallest dimension if necessary\n",
+    "                min_dimension = min(mesh.get_max_bound() - mesh.get_min_bound())\n",
+    "                if min_dimension >= 0.2 and temp_dimension > min_dimension:\n",
+    "                    temp_dimension = round(float(min_dimension), 2)\n",
+    "                \n",
+    "                # Store the mesh and its corresponding IFC GUID\n",
     "                all_meshes.append(mesh)\n",
-    "         \n",
-    "                #attributes = product.get_info()\n",
-    "                element_information[ind] = shape.guid\n",
-    "                ind += 1\n",
-    "                        \n",
+    "                element_information[index] = shape.guid\n",
+    "                index += 1\n",
+    "                \n",
+    "            # Move to the next geometric representation\n",
     "            if not iterator.next():\n",
     "                break\n",
-    "    \n",
     "\n",
     "    return all_meshes, element_information, temp_dimension\n",
+    "\n",
     "\n",
     "def create_uniform_grid(bounds, voxel_size):\n",
     "    \"\"\"Create a uniform grid within the given bounds.\"\"\"\n",
@@ -93,35 +122,35 @@
     "\n",
     "    return point_cloud_pv\n",
     "\n",
-    "def process_point(pcd, mesh_guid, grid_bounds, voxel_size, dims, grid_values, grid_attributes):\n",
+    "\n",
+    "def process_point(args):\n",
+    "    pcd, mesh_guid_index, grid_bounds, voxel_size, dims, grid_attributes = args\n",
     "    j = int((pcd[0] - grid_bounds[0]) / voxel_size)\n",
     "    i = int((pcd[1] - grid_bounds[2]) / voxel_size)\n",
     "    k = int((pcd[2] - grid_bounds[4]) / voxel_size)\n",
     "    \n",
-    "    if 0 <= i < dims[0]-1 and 0 <= j < dims[1]-1 and 0 <= k < dims[2]-1 and grid_values[i,j,k] == 0:\n",
-    "        grid_values[i,j,k] = 1\n",
-    "        grid_attributes[i,j,k] = mesh_guid\n",
+    "    if 0 <= i < dims[0]-1 and 0 <= j < dims[1]-1 and 0 <= k < dims[2]-1 and grid_attributes[i,j,k] == -1:\n",
+    "        grid_attributes[i,j,k] = mesh_guid_index\n",
     "\n",
-    "def voxelize_space(bounds, element_information, pcd_list, voxel_size):\n",
+    "def voxelize_space(bounds, pcd_list, voxel_size):\n",
     "    \"\"\"Create a 3d grid and check the intersections of the meshes with the grid.\"\"\"\n",
     "    grid = create_uniform_grid(bounds, voxel_size)\n",
-    "    empty_grid = create_uniform_grid(bounds, voxel_size)\n",
     "    \n",
-    "    # create an empty 3d array in the same dimensions of the grid\n",
     "    dims = grid.dimensions\n",
-    "    grid_values = np.zeros((dims[0]-1, dims[1]-1, dims[2]-1))\n",
-    "    grid_attributes = np.empty((dims[0]-1, dims[1]-1, dims[2]-1), dtype=object)\n",
-    "\n",
+    "    grid_attributes = np.full((dims[0]-1, dims[1]-1, dims[2]-1), -1, dtype=int)\n",
     "    grid_bounds = grid.bounds\n",
     "\n",
-    "    [process_point(point, element_information[i], grid_bounds, voxel_size, dims, grid_values, grid_attributes) \n",
-    "    for i, pcd in enumerate(pcd_list) for point in pcd.points]\n",
+    "    # Prepare arguments for parallel processing\n",
+    "    args_list = [(point, i, grid_bounds, voxel_size, dims, grid_attributes) \n",
+    "                 for i, pcd in enumerate(pcd_list) for point in pcd.points]\n",
     "\n",
-    "    # assign empty array to the grid\n",
-    "    grid.cell_data['values'] = grid_values.flatten(order='F').astype(bool)\n",
-    "    grid.cell_data['attributes'] = grid_attributes.flatten(order='F').astype(str)\n",
+    "    # Sequential processing for debugging\n",
+    "    for args in args_list:\n",
+    "        process_point(args)\n",
+    "\n",
+    "    grid.cell_data['attributes'] = grid_attributes.flatten(order='F').astype(int)\n",
     "    \n",
-    "    return grid, empty_grid\n",
+    "    return grid\n",
     "\n",
     "def get_sampling_points(mesh, voxel_size, points_per_unit_area=120):\n",
     "    \n",
@@ -147,8 +176,7 @@
     "    \n",
     "    return pcd_list\n",
     "\n",
-    "\n",
-    "def fetch_concrete_elements(ifc_file, grid, voxel_size):\n",
+    "def fetch_concrete_elements(ifc_file, grid, voxel_size,element_information):\n",
     "    elements = ifc_file.by_type(\"IfcBuildingElement\")\n",
     "    concrete_names = [\"STB\", \"concrete\", \"beton\"]\n",
     "    \n",
@@ -171,18 +199,20 @@
     "                                concrete_elements.add(element.GlobalId)\n",
     "                                break  # Exit once a match is found in the property set\n",
     "\n",
-    "    # Use NumPy's isin function to count all matching cells at once\n",
-    "    matching_cells = np.isin(grid.cell_data['attributes'], list(concrete_elements))\n",
-    "    total_count = np.sum(matching_cells)\n",
+    "    count = 0\n",
+    "    for att in grid.cell_data['attributes']:\n",
+    "        #print(att)\n",
+    "        if element_information.get(att) in concrete_elements:\n",
+    "            count += 1\n",
+    "    concrete_volume = round(count * voxel_size**3, 3)\n",
     "    \n",
-    "    concrete_volume = round(total_count * voxel_size**3, 3)\n",
-    "    \n",
-    "    return concrete_volume\n"
+    "    return concrete_volume    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,17 +221,15 @@
     "    print(file_name)\n",
     "\n",
     "    ### CONVERSION FROM IFC TO MESH ###\n",
+    "    print(f'Converting {file_name}...')\n",
     "    start_time = time.time()\n",
     "    all_meshes, element_information, voxel_size = open3d_block_by_element(ifc_file)\n",
-    "    end_time = time.time()\n",
-    "    conversion_time = end_time - start_time\n",
     "    total_polygons = sum(len(mesh.triangles) for mesh in all_meshes)\n",
-    "\n",
     "    # combine all meshes into one mesh and find the bounds\n",
     "    combined_mesh = reduce(lambda m1, m2: m1 + m2, all_meshes)\n",
     "    # Compute the oriented bounding box (OBB)\n",
-    "    obb = combined_mesh.get_oriented_bounding_box()\n",
-    "\n",
+    "    obb = combined_mesh.get_axis_aligned_bounding_box()\n",
+    "    \n",
     "    # Extract the eight corner points of the OBB\n",
     "    obb_points = np.asarray(obb.get_box_points())\n",
     "\n",
@@ -211,7 +239,11 @@
     "\n",
     "    bounds = np.array([xmin, xmax, ymin, ymax, zmin, zmax])\n",
     "\n",
+    "    end_time = time.time()\n",
+    "    conversion_time = end_time - start_time\n",
+    "\n",
     "    ### POINT CLOUD CREATION ###\n",
+    "    print(f'Point cloud is being formed for {file_name}...')\n",
     "    start_time = time.time()\n",
     "    point_cloud_list  = create_point_cloud(all_meshes, voxel_size)\n",
     "\n",
@@ -223,25 +255,35 @@
     "    point_cloud_processing = end_time - start_time\n",
     "\n",
     "    ### RASTERIZATION ###\n",
+    "    print(f'Rasterizing {file_name}...')\n",
     "    start_time = time.time()\n",
-    "    grid, empty_grid = voxelize_space(bounds, element_information, point_cloud_list, voxel_size)\n",
+    "    grid = voxelize_space(bounds, point_cloud_list, voxel_size)\n",
     "    end_time = time.time()\n",
     "    rasterization_time = end_time - start_time\n",
     "\n",
     "    ### VISUALIZATION ###\n",
+    "    print(f'Visualizing {file_name}...')\n",
     "    start_time = time.time()\n",
-    "    p = pv.Plotter()\n",
-    "    p.add_mesh(pcd_pv, color=\"blue\", point_size=10.0, render_points_as_spheres=True)\n",
-    "    p.add_mesh(empty_grid, opacity=0.3,show_edges=False)\n",
-    "    p.add_mesh(grid.extract_cells(grid.cell_data['values']), color=\"red\", opacity=0.6,show_edges=False)\n",
+    "    p = pv.Plotter()  \n",
+    "    # Extract the cells with non-empty attribute values\n",
+    "    non_empty_cells = grid.cell_data['attributes'] != -1  \n",
+    "    \n",
+    "    # Add the mesh to the plotter with the non-empty cells\n",
+    "    p.add_mesh(grid.extract_cells(non_empty_cells), opacity=0.5, show_edges=False,show_scalar_bar=False)\n",
+    "    p.add_bounding_box(line_width=2, color=\"blue\")\n",
+    "\n",
     "    screenshot_filename = os.path.join(\"screenshots\", os.path.basename(file_name) + \".png\")\n",
     "    p.screenshot(screenshot_filename)\n",
     "    #p.show()\n",
     "    end_time = time.time()\n",
     "    visualization_time = end_time - start_time\n",
     "\n",
-    "    concrete_volume = fetch_concrete_elements(ifc_file, grid, voxel_size)\n",
-    "    print(f'Total concrete volume is {concrete_volume} m3')\n",
+    "    print(f'Calculating concrete volume of {file_name}...')\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    concrete_volume = fetch_concrete_elements(ifc_file, grid, voxel_size, element_information)\n",
+    "    end_time = time.time()\n",
+    "    concrete_calculation_time = end_time - start_time\n",
     "\n",
     "    # Store the results in a dictionary\n",
     "    results = {}\n",
@@ -254,15 +296,51 @@
     "    results['Rasterization Time'] = rasterization_time\n",
     "    results['Visualization Time'] = visualization_time\n",
     "    results['Concrete Volume'] = concrete_volume\n",
+    "    results['Concrete Calculation Time'] = concrete_calculation_time\n",
     "\n",
+    "    print(results)\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#process_ifc_file(\"IFC Files/04.ifc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IFC Files\\01_Test.ifc\n",
+      "Converting IFC Files\\01_Test.ifc...\n",
+      "Point cloud is being formed for IFC Files\\01_Test.ifc...\n",
+      "Rasterizing IFC Files\\01_Test.ifc...\n",
+      "Visualizing IFC Files\\01_Test.ifc...\n",
+      "Calculating concrete volume of IFC Files\\01_Test.ifc...\n",
+      "{'File': 'IFC Files\\\\01_Test.ifc', 'Conversion Time': 0.10132193565368652, 'Total Polygons': 1056, 'Voxel Size': 0.2, 'Total Points': 71470, 'Point Cloud Creation Time': 0.019804000854492188, 'Rasterization Time': 0.4413883686065674, 'Visualization Time': 0.2700939178466797, 'Concrete Volume': 9.952, 'Concrete Calculation Time': 0.003988504409790039}\n",
+      "IFC Files\\02_Duplex.ifc\n",
+      "Converting IFC Files\\02_Duplex.ifc...\n",
+      "Point cloud is being formed for IFC Files\\02_Duplex.ifc...\n",
+      "Rasterizing IFC Files\\02_Duplex.ifc...\n",
+      "Visualizing IFC Files\\02_Duplex.ifc...\n",
+      "Calculating concrete volume of IFC Files\\02_Duplex.ifc...\n",
+      "{'File': 'IFC Files\\\\02_Duplex.ifc', 'Conversion Time': 2.5520987510681152, 'Total Polygons': 9420, 'Voxel Size': 0.2, 'Total Points': 2158977, 'Point Cloud Creation Time': 0.36368298530578613, 'Rasterization Time': 12.031911373138428, 'Visualization Time': 0.22869205474853516, 'Concrete Volume': 58.456, 'Concrete Calculation Time': 0.48111534118652344}\n",
+      "IFC Files\\03_Clinic.ifc\n",
+      "Converting IFC Files\\03_Clinic.ifc...\n",
+      "Point cloud is being formed for IFC Files\\03_Clinic.ifc...\n",
+      "Rasterizing IFC Files\\03_Clinic.ifc...\n"
+     ]
+    }
+   ],
    "source": [
     "def find_ifc_files(directory):\n",
     "    \"\"\"Find all IFC files in a given directory.\"\"\"\n",
@@ -270,17 +348,25 @@
     "    search_path = os.path.join(directory, \"*.ifc\")\n",
     "    return glob.glob(search_path)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    directory_path = \"IFC Files/\"\n",
-    "    ifc_files = find_ifc_files(directory_path)\n",
+    "directory_path = \"IFC Files/\"\n",
     "\n",
-    "    # Use all available CPU cores\n",
-    "    with multiprocessing.Pool() as pool:\n",
-    "        all_results = pool.map(process_ifc_file, ifc_files)\n",
+    "ifc_files = find_ifc_files(directory_path)\n",
     "\n",
-    "    # Convert the list of results to a DataFrame\n",
-    "    df = pd.DataFrame(all_results)\n",
-    "    df.to_excel(\"performance_results_parallel.xlsx\", index=False)"
+    "# Process each IFC file and store the results in a list\n",
+    "all_results = [process_ifc_file(file_name) for file_name in ifc_files]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the list of results to a DataFrame\n",
+    "df = pd.DataFrame(all_results)\n",
+    "\n",
+    "# Write the DataFrame to an Excel file\n",
+    "df.to_excel(\"performance_results_multiprocessing.xlsx\", index=False)"
    ]
   }
  ],
