--- a/ifc_polygon-rasterization_multiprocessing.ipynb
+++ b/ifc_polygon-rasterization_multiprocessing.ipynb
@@ -326,18 +326,39 @@
       "Rasterizing IFC Files\\01_Test.ifc...\n",
       "Visualizing IFC Files\\01_Test.ifc...\n",
       "Calculating concrete volume of IFC Files\\01_Test.ifc...\n",
-      "{'File': 'IFC Files\\\\01_Test.ifc', 'Conversion Time': 0.10132193565368652, 'Total Polygons': 1056, 'Voxel Size': 0.2, 'Total Points': 71470, 'Point Cloud Creation Time': 0.019804000854492188, 'Rasterization Time': 0.4413883686065674, 'Visualization Time': 0.2700939178466797, 'Concrete Volume': 9.952, 'Concrete Calculation Time': 0.003988504409790039}\n",
+      "{'File': 'IFC Files\\\\01_Test.ifc', 'Conversion Time': 0.11700773239135742, 'Total Polygons': 1056, 'Voxel Size': 0.2, 'Total Points': 71470, 'Point Cloud Creation Time': 0.01574397087097168, 'Rasterization Time': 0.5683822631835938, 'Visualization Time': 0.4547157287597656, 'Concrete Volume': 9.952, 'Concrete Calculation Time': 0.0070455074310302734}\n",
       "IFC Files\\02_Duplex.ifc\n",
       "Converting IFC Files\\02_Duplex.ifc...\n",
       "Point cloud is being formed for IFC Files\\02_Duplex.ifc...\n",
       "Rasterizing IFC Files\\02_Duplex.ifc...\n",
       "Visualizing IFC Files\\02_Duplex.ifc...\n",
       "Calculating concrete volume of IFC Files\\02_Duplex.ifc...\n",
-      "{'File': 'IFC Files\\\\02_Duplex.ifc', 'Conversion Time': 2.5520987510681152, 'Total Polygons': 9420, 'Voxel Size': 0.2, 'Total Points': 2158977, 'Point Cloud Creation Time': 0.36368298530578613, 'Rasterization Time': 12.031911373138428, 'Visualization Time': 0.22869205474853516, 'Concrete Volume': 58.456, 'Concrete Calculation Time': 0.48111534118652344}\n",
+      "{'File': 'IFC Files\\\\02_Duplex.ifc', 'Conversion Time': 2.658843517303467, 'Total Polygons': 9420, 'Voxel Size': 0.2, 'Total Points': 2158977, 'Point Cloud Creation Time': 0.368682861328125, 'Rasterization Time': 12.085823059082031, 'Visualization Time': 0.23169207572937012, 'Concrete Volume': 58.464, 'Concrete Calculation Time': 0.48409366607666016}\n",
       "IFC Files\\03_Clinic.ifc\n",
       "Converting IFC Files\\03_Clinic.ifc...\n",
       "Point cloud is being formed for IFC Files\\03_Clinic.ifc...\n",
-      "Rasterizing IFC Files\\03_Clinic.ifc...\n"
+      "Rasterizing IFC Files\\03_Clinic.ifc...\n",
+      "Visualizing IFC Files\\03_Clinic.ifc...\n",
+      "Calculating concrete volume of IFC Files\\03_Clinic.ifc...\n",
+      "{'File': 'IFC Files\\\\03_Clinic.ifc', 'Conversion Time': 20.789600133895874, 'Total Polygons': 63182, 'Voxel Size': 0.27, 'Total Points': 12774131, 'Point Cloud Creation Time': 2.567265748977661, 'Rasterization Time': 71.96733450889587, 'Visualization Time': 0.4562826156616211, 'Concrete Volume': 17.065, 'Concrete Calculation Time': 7.530181169509888}\n",
+      "IFC Files\\04.ifc\n",
+      "Converting IFC Files\\04.ifc...\n",
+      "Point cloud is being formed for IFC Files\\04.ifc...\n",
+      "Rasterizing IFC Files\\04.ifc...\n",
+      "Visualizing IFC Files\\04.ifc...\n",
+      "Calculating concrete volume of IFC Files\\04.ifc...\n",
+      "{'File': 'IFC Files\\\\04.ifc', 'Conversion Time': 2.390678644180298, 'Total Polygons': 16440, 'Voxel Size': 0.25, 'Total Points': 21111368, 'Point Cloud Creation Time': 3.4537978172302246, 'Rasterization Time': 118.20562362670898, 'Visualization Time': 0.7707204818725586, 'Concrete Volume': 8401.938, 'Concrete Calculation Time': 1.4923434257507324}\n",
+      "IFC Files\\05.ifc\n",
+      "Converting IFC Files\\05.ifc...\n",
+      "Point cloud is being formed for IFC Files\\05.ifc...\n",
+      "Rasterizing IFC Files\\05.ifc...\n",
+      "Visualizing IFC Files\\05.ifc...\n",
+      "Calculating concrete volume of IFC Files\\05.ifc...\n",
+      "{'File': 'IFC Files\\\\05.ifc', 'Conversion Time': 4.050538778305054, 'Total Polygons': 39244, 'Voxel Size': 0.2, 'Total Points': 32082430, 'Point Cloud Creation Time': 5.436452865600586, 'Rasterization Time': 214.52592158317566, 'Visualization Time': 1.6392295360565186, 'Concrete Volume': 9998.552, 'Concrete Calculation Time': 2.4581797122955322}\n",
+      "IFC Files\\06.ifc\n",
+      "Converting IFC Files\\06.ifc...\n",
+      "Point cloud is being formed for IFC Files\\06.ifc...\n",
+      "Rasterizing IFC Files\\06.ifc...\n"
      ]
     }
    ],
