--- a/ifc_polygon-rasterization_cartesian.ipynb
+++ b/ifc_polygon-rasterization_cartesian.ipynb
@@ -193,37 +193,11 @@
     "    \n",
     "    return element_volumes\n",
     "\n",
-    "def kabsch(P, Q):\n",
-    "    \"\"\"\n",
-    "    P and Q are Nx3 matrices of corresponding points.\n",
-    "    Returns the rotation matrix to align P with Q.\n",
-    "    \"\"\"\n",
-    "    # Step 1 & 2: Find centroids and center points\n",
-    "    centroid_P = np.mean(P, axis=0)\n",
-    "    centroid_Q = np.mean(Q, axis=0)\n",
-    "    P_centered = P - centroid_P\n",
-    "    Q_centered = Q - centroid_Q\n",
-    "    \n",
-    "    # Step 3: Compute covariance matrix\n",
-    "    H = np.dot(P_centered.T, Q_centered)\n",
-    "    \n",
-    "    # Step 4: SVD\n",
-    "    U, S, Vt = np.linalg.svd(H)\n",
-    "    \n",
-    "    # Step 5 & 6: Compute rotation matrix and handle reflections\n",
-    "    R = np.dot(Vt.T, U.T)\n",
-    "    if np.linalg.det(R) < 0:\n",
-    "        U[:, -1] = -U[:, -1]\n",
-    "        R = np.dot(Vt.T, U.T)\n",
-    "    \n",
-    "    return R\n",
-    "\n",
     "def process_ifc_file(file_name, writer):\n",
     "    try:\n",
     "        \n",
     "        pv.set_plot_theme(\"document\")\n",
-    "        pv.global_theme.window_size = [1024, 768]\n",
-    "        pv.global_theme.jupyter_backend = 'trame'\n",
+    "        pv.global_theme.jupyter_backend = 'static'\n",
     "        p = pv.Plotter()\n",
     "        ifc_file = ifcopenshell.open(file_name)\n",
     "        print(file_name)\n",
@@ -239,35 +213,8 @@
     "        # combine all meshes into one mesh and find the bounds\n",
     "        combined_mesh = reduce(lambda m1, m2: m1 + m2, all_meshes)\n",
     "\n",
-    "\n",
-    "        ####################################################################################\n",
-    "        '''obb = combined_mesh.get_oriented_bounding_box()\n",
-    "        obb_points_o3d = np.asarray(obb.get_box_points())\n",
-    "        obb_points_pcl = pv.PolyData(obb_points_o3d)\n",
-    "        \n",
-    "        aabb = combined_mesh.get_axis_aligned_bounding_box()\n",
-    "        aabb_points_o3d = np.asarray(aabb.get_box_points())\n",
-    "        aabb_points_pcl = pv.PolyData(aabb_points_o3d)\n",
-    "\n",
-    "        R = kabsch(aabb_points_pcl.points, obb_points_pcl.points)'''\n",
-    "\n",
-    "        '''rotated_meshes = []\n",
-    "        for mesh in all_meshes:\n",
-    "            # Get the vertices of the mesh\n",
-    "            vertices = np.asarray(mesh.vertices)\n",
-    "            \n",
-    "            # Apply the rotation\n",
-    "            rotated_vertices = vertices.dot(R.T)\n",
-    "            \n",
-    "            # Update the mesh vertices\n",
-    "            mesh.vertices = o3d.utility.Vector3dVector(rotated_vertices)\n",
-    "            rotated_meshes.append(mesh)\n",
-    "        combined_mesh_2 = reduce(lambda m1, m2: m1 + m2, rotated_meshes)'''\n",
     "        end_time = time.time()\n",
     "        conversion_time = end_time - start_time\n",
-    "\n",
-    "        ####################################################################################\n",
-    "\n",
     "\n",
     "        ### POINT CLOUD CREATION ###\n",
     "        print(f'Point cloud formation representing {file_name}...')\n",
@@ -317,7 +264,7 @@
     "        # Add the box to the plotter\n",
     "        p.add_mesh(box, color=\"blue\", style=\"wireframe\", line_width=2)\n",
     "        # Add the mesh to the plotter with the non-empty cells\n",
-    "        p.add_mesh(grid.extract_cells(non_empty_cells), opacity=0.5, show_edges=False,show_scalar_bar=False)\n",
+    "        p.add_mesh(grid.extract_cells(non_empty_cells), opacity=0.5, show_edges=True,show_scalar_bar=False)\n",
     "        \n",
     "        screenshot_filename = os.path.join(\"screenshots\", os.path.basename(file_name) + \".png\")\n",
     "        p.screenshot(screenshot_filename)\n",
@@ -408,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the current date and time\n",
+    "'''# Get the current date and time\n",
     "now = datetime.datetime.now()\n",
     "\n",
     "# Format the date and time as a string: YYYYMMDD_HHMMSS\n",
@@ -425,7 +372,7 @@
     "    pd.DataFrame().to_excel(writer, sheet_name='QTO')  # Add appropriate columns if needed\n",
     "    \n",
     "    # Call process_ifc_file within the writer context\n",
-    "    process_ifc_file(\"IFC Files/01_Test.ifc\", writer)"
+    "    process_ifc_file(\"IFC Files/01_Test.ifc\", writer)'''"
    ]
   },
   {
@@ -434,17 +381,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''directory_path = \"IFC Files/\"\n",
+    "directory_path = \"IFC Files/\"\n",
     "ifc_files = find_ifc_files(directory_path)\n",
     "\n",
     "# Get the current date and time\n",
     "now = datetime.datetime.now()\n",
     "\n",
     "# Format the date and time as a string: YYYYMMDD_HHMMSS\n",
-    "formatted_time = now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "formatted_time = now.strftime(\"%Y%m%d\")\n",
     "\n",
     "# Create a filename using the formatted time\n",
-    "filename = f\"output_{formatted_time}.xlsx\"\n",
+    "filename = f\"output_{formatted_time}_cartesian.xlsx\"\n",
     "\n",
     "# Create an Excel writer object\n",
     "# Ensure the writer context is used when calling process_ifc_file\n",
@@ -455,8 +402,7 @@
     "      \n",
     "    # Process each IFC file and write the results to Excel\n",
     "    for file_name in ifc_files:\n",
-    "        process_ifc_file(file_name, writer)\n",
-    "'''"
+    "        process_ifc_file(file_name, writer)\n"
    ]
   }
  ],
