--- a/ifc_polygon-rasterization_rotation_affine.ipynb
+++ b/ifc_polygon-rasterization_rotation_affine.ipynb
@@ -499,7 +499,7 @@
     }
    ],
    "source": [
-    "# Get the current date and time\n",
+    "'''# Get the current date and time\n",
     "now = datetime.datetime.now()\n",
     "\n",
     "# Format the date and time as a string: YYYYMMDD_HHMMSS\n",
@@ -516,7 +516,7 @@
     "    pd.DataFrame().to_excel(writer, sheet_name='QTO')  # Add appropriate columns if needed\n",
     "    \n",
     "    # Call process_ifc_file within the writer context\n",
-    "    process_ifc_file(\"IFC Files/04.ifc\", writer)"
+    "    process_ifc_file(\"IFC Files/04.ifc\", writer)'''"
    ]
   },
   {
@@ -536,7 +536,7 @@
     }
    ],
    "source": [
-    "'''directory_path = \"IFC Files/\"\n",
+    "directory_path = \"IFC Files/\"\n",
     "ifc_files = find_ifc_files(directory_path)\n",
     "\n",
     "# Get the current date and time\n",
@@ -557,8 +557,7 @@
     "      \n",
     "    # Process each IFC file and write the results to Excel\n",
     "    for file_name in ifc_files:\n",
-    "        process_ifc_file(file_name, writer)\n",
-    "'''"
+    "        process_ifc_file(file_name, writer)\n"
    ]
   }
  ],
