--- a/ifc_polygon-rasterization_affine_rooms.ipynb
+++ b/ifc_polygon-rasterization_affine_rooms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,12 @@
     "from collections import defaultdict\n",
     "import datetime\n",
     "from csv import writer\n",
-    "import traceback\n",
-    "import concurrent.futures"
+    "import traceback\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,24 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IFC Files/02_Duplex.ifc\n",
-      "Converting IFC Files/02_Duplex.ifc...\n",
-      "Point cloud formation representing IFC Files/02_Duplex.ifc...\n",
-      "Rasterizing IFC Files/02_Duplex.ifc...\n",
-      "Visualizing IFC Files/02_Duplex.ifc...\n",
-      "Calculating quantities in <ifcopenshell.file.file object at 0x00000233E3F77100>...\n",
-      "{'File': 'IFC Files/02_Duplex.ifc', '# of Polygons': 9420, '# of Points': 863543, 'Cell Size (m)': (0.5, 0.5, 0.5), 'Conversion (sec)': 2.83, 'Point Cloud Creation (sec)': 0.15, 'Rasterization (sec)': 3.58, 'Visualization (sec)': 0.2} {'Quantity Calculation (sec)': 0.02, 'ZB_AUSWAHL_to_Element_Type': {}}\n",
-      "(55, 20, 18)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cell_sizes = [round(i, 2) for i in list(np.arange(0.5, 0.51, 0.05))]\n",
     "cell_sizes = sorted(cell_sizes, reverse=True)  \n",
@@ -577,7 +561,8 @@
     "        print(results1, results2)\n",
     "\n",
     "        #Find the enclosed spaces\n",
-    "        grid_with_rooms = find_rooms(grid, file_name)"
+    "        grid_with_rooms = find_rooms(grid, file_name)\n",
+    "        "
    ]
   }
  ],
